refactor ping module and add to swagger
